--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="container">
         <div class="decoration circle1"></div>
         <div class="decoration circle2"></div>
-        <img src="/api/placeholder/250/100" alt="455 Communications Ltd Logo" class="logo">
+        <img src="455-Communications/logo.png" alt="455 Communications Ltd Logo" class="logo">
         <h1>Our site is undergoing maintenance.<br>We'll be back soon.</h1>
         <div class="countdown">
             <div class="countdown-item">
