--- a/index.html
+++ b/index.html
@@ -150,18 +150,19 @@
             }
 
             .countdown {
-                flex-direction: row;
-                justify-content: space-around;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
+                justify-content: center;
             }
 
             .countdown-item {
-                margin: 0.5rem;
-                flex-basis: 40%;
+                margin: 0;
             }
 
             .countdown-number {
                 font-size: 2.5rem;
-                min-width: 60px;
+                min-width: 70px;
                 padding: 0.3rem;
             }
 
@@ -175,20 +176,9 @@
                 font-size: 1.5rem;
             }
 
-            .countdown {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .countdown-item {
-                margin: 0.5rem 0;
-                flex-basis: auto;
-                width: 100%;
-            }
-
             .countdown-number {
                 font-size: 2rem;
-                min-width: 50px;
+                min-width: 60px;
             }
 
             .countdown-label {
